# kivy-circular-progress-bar

./: README.md  pyproject.toml  setup.cfg
kivy_circular_progress_bar/: __init__.py
