[metadata]
name = kivy-circular-progress-bar
version = 0.0.1
author = Kacper Florianski
description =  An implementation of a circular progress bar for the Python kivy GUI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qlrd/kivy-circular-progress-bar
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    kivy >= 2.3.0

[options.packages.find]
where = src
